[gd_scene load_steps=23 format=3 uid="uid://db20a5533g42w"]

[ext_resource type="Script" path="res://items/item_base.gd" id="1_6isls"]
[ext_resource type="Texture2D" uid="uid://bcgabke5i1fto" path="res://assets/items/keys_g.png" id="2_1e08f"]
[ext_resource type="PackedScene" uid="uid://boaxkcvmo0fvr" path="res://sensors/proximity_sensor.tscn" id="3_8pw8m"]
[ext_resource type="Script" path="res://items/state/anim_state.gd" id="4_2h2x7"]
[ext_resource type="Script" path="res://items/state/anim_state_await.gd" id="4_u7qag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x66ak"]
atlas = ExtResource("2_1e08f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fbb1"]
atlas = ExtResource("2_1e08f")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilxq7"]
atlas = ExtResource("2_1e08f")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8g0d"]
atlas = ExtResource("2_1e08f")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqmrx"]
atlas = ExtResource("2_1e08f")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fytw0"]
atlas = ExtResource("2_1e08f")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmd8l"]
atlas = ExtResource("2_1e08f")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7r2p"]
atlas = ExtResource("2_1e08f")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yp1g0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x66ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fbb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilxq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8g0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqmrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fytw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmd8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7r2p")
}],
"loop": true,
"name": &"item",
"speed": 7.0
}]

[sub_resource type="Gradient" id="Gradient_y3dnc"]
colors = PackedColorArray(1, 0.423529, 0.858824, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4pftf"]
gradient = SubResource("Gradient_y3dnc")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.504587, 0.802752)

[sub_resource type="CircleShape2D" id="CircleShape2D_oqber"]
radius = 4.0

[sub_resource type="Animation" id="Animation_vrvuf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"item"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b6xsm"]
resource_name = "item"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"item"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_teanl"]
resource_name = "picked"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gc0l"]
_data = {
"RESET": SubResource("Animation_vrvuf"),
"item": SubResource("Animation_b6xsm"),
"picked": SubResource("Animation_teanl")
}

[sub_resource type="BlackboardPlan" id="BlackboardPlan_lxt0n"]
var/opened/name = &"opened"
var/opened/type = 1
var/opened/value = false
var/opened/hint = 0
var/opened/hint_string = ""

[node name="Key" type="StaticBody2D"]
collision_layer = 4
collision_mask = 256
script = ExtResource("1_6isls")
metadata/_edit_group_ = true

[node name="Root" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Root"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_yp1g0")
animation = &"item"
autoplay = "item"

[node name="PointLight2D" type="PointLight2D" parent="Root"]
scale = Vector2(2, 2)
texture = SubResource("GradientTexture2D_4pftf")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oqber")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7gc0l")
}
autoplay = "item"
speed_scale = 0.5

[node name="ProximitySensor" parent="." instance=ExtResource("3_8pw8m")]

[node name="LimboHSM" type="LimboHSM" parent="."]
blackboard_plan = SubResource("BlackboardPlan_lxt0n")

[node name="IdleState" type="LimboState" parent="LimboHSM" node_paths=PackedStringArray("animation_player")]
script = ExtResource("4_2h2x7")
animation_player = NodePath("../../AnimationPlayer")
animation = &"item"

[node name="PickedState" type="LimboState" parent="LimboHSM" node_paths=PackedStringArray("animation_player")]
script = ExtResource("4_u7qag")
animation_player = NodePath("../../AnimationPlayer")
animation = &"picked"

[connection signal="in_proximity" from="ProximitySensor" to="." method="_on_proximity_sensor_in_proximity"]
